Fix spacing on img elements

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ div {
 .p-icons {
     height: 25px;
     width: auto;
+    justify-self: center;
 }
 
 .projects {
@@ -157,7 +158,7 @@ div {
     border-radius: 6px;
     background-color: white;
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr;
+    grid-template-columns: 4fr 1fr 1fr 1fr;
 }
 
 .p-header {
@@ -296,7 +297,7 @@ div {
 .sidebar-main-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 39.422px);
 }
 
 .sidebar-setting-container {
